--- a/haskell-template.cabal
+++ b/haskell-template.cabal
@@ -10,17 +10,20 @@ author:             Hegyi Áron Ferenc
 maintainer:         hegyi.aron101@gmail.com
 extra-source-files: README.md
 
-executable haskell-template
-  main-is:          Main.hs
-  other-modules:
+library
+  exposed-modules:
     Task1
     Task2
-    TestUtils
+    Test1
+    Test2
 
-  build-depends:
-    , base   ^>=4.17.2.0
-    , HUnit
-    , time
-
-  hs-source-dirs:   src module/lesson1 module/lesson2
+  other-modules:    Utils.Test
+  hs-source-dirs:   Utils Module/Lesson1 Module/Lesson2
+  build-depends:    base ^>=4.17.2.0
   default-language: Haskell2010
+
+-- executable haskell-template
+-- main-is:          Main.hs
+-- hs-source-dirs:   app
+-- build-depends:    base ^>=4.17.2.0
+-- default-language: Haskell2010
